--- a/index.Rmd
+++ b/index.Rmd
@@ -1,11 +1,11 @@
 ---
 title: "Dinamica_Poblacional"
-output: 
-  html_document: 
-    theme: spacelab
-    toc: yes
-    toc_float: yes
-    code_folding: hide
+#output: 
+#  html_document: 
+#    theme: spacelab
+#    toc: yes
+#    toc_float: yes
+#    code_folding: hide
 author: ""
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
@@ -22,6 +22,21 @@ editor_options:
     wrap: 72
 # https://statnmap.com/2017-11-13-enable-code-folding-in-bookdown-and-blogdown/ for code folding script    
 ---
+
+title: "A Minimal Book Example"
+author: "John Doe"
+date: "`r Sys.Date()`"
+site: bookdown::bookdown_site
+documentclass: book
+bibliography: [book.bib, packages.bib]
+# url: your book url like https://bookdown.org/yihui/bookdown
+# cover-image: path to the social sharing image like images/cover.jpg
+description: |
+  This is a minimal example of using the bookdown package to write a book.
+  The HTML output format for this example is bookdown::gitbook,
+  set in the _output.yml file.
+link-citations: yes
+github-repo: rstudio/bookdown-demo
 
 # VII Andean Orchid Conference, Cusco, Perú, 24-26 Noviembre 2023 {#sec-vii-andean-orchid-conference-cusco-perú-24-26-noviembre-2023}
 
