--- a/04-Recopilacion_datos_en_el_campo.Rmd
+++ b/04-Recopilacion_datos_en_el_campo.Rmd
@@ -1,6 +1,6 @@
 # Como recopilar datos en el campo 
 
-Por: Raymond L. Tremblay
+Por: Raymond L. Tremblay y Aucencia
 
 ## Identificar la especie de estudio
 
