--- a/06-calcular_fecundidad.Rmd
+++ b/06-calcular_fecundidad.Rmd
@@ -1,6 +1,6 @@
 # Como calcular fecundidad
 
-## Por: Demetria: equipo ECOSUR
+## Por: Demetria y Aucencia: equipo ECOSUR
 
 ## Métodos tradicional de calcular las transiciones
 
