--- a/07-matriz_transicion_fecundidad_clonal.Rmd
+++ b/07-matriz_transicion_fecundidad_clonal.Rmd
@@ -1,6 +1,6 @@
 # Matrices de transicion, fecundidad y clonal 
 
-## Por:??
+## Por: Raymond 
 
 ## Métodos tradicional de calcular las transiciones
 
