--- a/10-Elasticidad.Rmd
+++ b/10-Elasticidad.Rmd
@@ -1,6 +1,6 @@
 # Elasticidad
 
-## Por: Ernesto Mujica y Elaine Gonzalez
+## Por: Demetria, Ernesto Mujica y Elaine Gonzalez
 
 ## Qué es la Elasticidad
 
