--- a/21-Impacto_de_Datos_sin_Sentido.Rmd
+++ b/21-Impacto_de_Datos_sin_Sentido.Rmd
@@ -13,7 +13,7 @@ Without a doubt the main topic (although exclusive) for the use of PPM has been 
 
 ### No Mortality/Perfect survivorship
 
-Consider a species were data is collected and the transition matrix (Sp1matU) is as follows and fertility matriz is (Sp1matF). Note that none of the individuals died in the adult stage (perfect survivorship).  
+Consider a species were data is collected and the transition matrix (Sp1matU) is as follows and fertility matriz is (Sp1matF). Note that none of the individuals died in the adult stage (perfect survivorship).  Consiquently, the population size never decreases or increases after a time period.   Under ALL biologically realistic modelling we would expect populaiton size to sdtart decreasing if a population has no receuitment.   
 
 ```{r}
 library(DiagrammeR)
@@ -38,9 +38,9 @@ plot_life_cycle(Sp1matU, stages=stages, fontsize = 0)
 ```
 
 
-Thus if we analize this matrix we assume that none of the individuals in the adult stage die, at any time period!!!. Clearly this is not realistic, for any species the likelyhood of death at any stage is never zero (although is could very small) and thus our matrix is non-sensicle. Consider a tree species, such a *Sequoia*, it is the likely for large trees of this species it is likely to that survivorship is very high, however never zero.   
+Thus if we analize this matrix we assume that none of the individuals in the adult stage die, at any time period!!!. Clearly this is not realistic.  For any species the likelyhood of death at any stage is never zero (although is could very small) and thus our matrix is non-sensicle. Consider a tree species, such a *Sequoia*, it is the likely for large trees of this species it is likely to that survivorship is very high, however never 100%.   
 
-In the following script we chow that population changes after 5 -6 periods reminds close to one and does not change eventhough we have not recruits (we use the transition matrix without fertility).  If there are no recrtuis (fertility matrix) population size should reduce with time.  
+In the following script we show that population changes after 5 -6 periods reminds close to one and does not change eventhough we have not recruits (we use the transition matrix without fertility).  If there are no recruits (fertility matrix) population size should reduce with time.  
 
 ```{r}
 n=c(5,5,5)
@@ -52,8 +52,50 @@ pop.projection(Sp1matU, n=n)$pop.changes
 ```
 
 
+#### Assume a small change in mortality
 
-### No Transitions
+Note that in this new model although surviviroship is very close to zero, population decline in every time period (even if only by a small fraction). 
+
+```{r}
+Sp1matU_2 <- rbind(
+  c(0.0, 0.0, 0.0),
+  c(0.5, 0.3, 0.0),
+  c(0.0, 0.4, 0.995)
+) # transition matrix\
+
+pop.projection(Sp1matU_2, n=n)$pop.changes
+
+```
+
+
+
+### No Transitions between stages
+
+In the present scenario, juveniles do not grow to become adults, all juveniles either remain juveniles or die. Note the life cycle figure where no arrows connect juveniles to adults.   
+
+```{r}
+library(DiagrammeR)
+
+Sp1matU <- rbind(
+  c(0.0, 0.0, 0.0),
+  c(0.5, 0.7, 0.0),
+  c(0.0, 0.0, 0.995)
+) # transition matrix
+
+Sp1matF <- rbind(
+  c(0.0, 0.0, 1.0),
+  c(0.0, 0.0, 0.0),
+  c(0.0, 0.0, 0.0)
+) # fertility matrix
+
+Sp1matA = Sp1matU+Sp1matF # TF matrix
+library(Rage)
+stages <- c("plantula", "juvenil", "adulto")
+
+plot_life_cycle(Sp1matU, stages=stages, fontsize = 0)
+```
+
+
 
 ### No survivorship
 
