--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,15 @@
+@article{stott2010reducibility,
+  title={On reducibility and ergodicity of population projection matrix models},
+  author={Stott, Iain and Townley, Stuart and Carslake, David and Hodgson, David J},
+  journal={Methods in Ecology and Evolution},
+  volume={1},
+  number={3},
+  pages={242--252},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+
+
 @Book{xie2015,
   title = {Dynamic Documents with {R} and knitr},
   author = {Yihui Xie},
@@ -119,4 +131,12 @@
   pages={262--271},
   year={2013},
   publisher={Wiley Online Library}
+}
+
+@book{caswell2000matrix,
+  title={Matrix population models},
+  author={Caswell, Hal},
+  volume={1},
+  year={2000},
+  publisher={Sinauer Sunderland, MA}
 }
