--- a/book.bib
+++ b/book.bib
@@ -9,6 +9,24 @@
   publisher={Wiley Online Library}
 }
 
+@article{rasmussen2015germination,
+  title={Germination and seedling establishment in orchids: a complex of requirements},
+  author={Rasmussen, Hanne N and Dixon, Kingsley W and Jers{\'a}kov{\'a}, Jana and T{\v{e}}{\v{s}}itelov{\'a}, Tamara},
+  journal={Annals of Botany},
+  volume={116},
+  number={3},
+  pages={391--402},
+  year={2015},
+  publisher={Oxford University Press}
+}
+
+@article{torres2015seed,
+  title={Seed production and recruitment in primary and harvested Nothofagus pumilio forests: influence of regional climate and years after cuttings},
+  author={Torres, Ana Delia and Cellini, Juan Manuel and Lencinas, Mar{\'\i}a Vanessa and Barrera, Marcelo Daniel and Soler, Rosina and D{\'\i}az Delgado, Ricardo and Mart{\'\i}nez Pastur, Guillermo},
+  journal={Forest Systems},
+  volume={24},
+  year={2015}
+}
 
 @Book{xie2015,
   title = {Dynamic Documents with {R} and knitr},
