--- a/book.bib
+++ b/book.bib
@@ -158,3 +158,37 @@
   year={2000},
   publisher={Sinauer Sunderland, MA}
 }
+
+@article{whigham2006seed,
+  title={Seed longevity in terrestrial orchids--potential for persistent in situ seed banks},
+  author={Whigham, Dennis F and O’Neill, John P and Rasmussen, Hanne N and Caldwell, Bruce A and McCormick, Melissa K},
+  journal={Biological conservation},
+  volume={129},
+  number={1},
+  pages={24--30},
+  year={2006},
+  publisher={Elsevier}
+}
+
+
+@article{rasmussen1993seed,
+  title={Seed ecology of dust seeds in situ: a new study technique and its application in terrestrial orchids},
+  author={Rasmussen, Hanne N and Whigham, Dennis F},
+  journal={American journal of botany},
+  volume={80},
+  number={12},
+  pages={1374--1378},
+  year={1993},
+  publisher={Wiley Online Library}
+}
+
+@article{gale2010constraints,
+  title={Constraints on establishment in an endangered terrestrial orchid: a comparative study of in vitro and in situ seed germinability and seedling development in Nervilia nipponica},
+  author={Gale, Stephan W and Yamazaki, Jun and Hutchings, Michael J and Yukawa, Tomohisa and Miyoshi, Kazumitsu},
+  journal={Botanical Journal of the Linnean Society},
+  volume={163},
+  number={2},
+  pages={166--180},
+  year={2010},
+  publisher={Oxford University Press}
+}
